<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/lightwhite"
    android:padding="10dp"
    tools:context=".SignUp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back_black_24dp"/>
        <TextView
            android:id="@+id/LogInbtn"
            android:onClick="LognIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:gravity="end"
            android:textColor="@color/blackcolor"
            android:textSize="15dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_your_n_account"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/blackcolor"
            android:textSize="25dp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="280dp"
            android:layout_height="45dp"
            android:layout_marginTop="35dp"
            android:background="@drawable/btn"
            android:elevation="5dp"
            android:hint="@string/e_mail"
            android:inputType="text"
            android:paddingLeft="15dp"
            android:textColorHint="@color/fullwhite" />

        <EditText
            android:id="@+id/password"
            android:layout_width="280dp"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn"
            android:elevation="5dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="15dp"
            android:textColorHint="@color/fullwhite" />

        <EditText
            android:id="@+id/repassword"
            android:layout_width="280dp"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn"
            android:elevation="5dp"
            android:hint="@string/re_password"
            android:inputType="textPassword"
            android:paddingLeft="15dp"
            android:textColorHint="@color/fullwhite" />

        <Button
            android:layout_width="280dp"
            android:layout_height="45dp"
            android:id="@+id/joinus"
            android:text="@string/join_us"
            android:textColor="@color/whitecolor"
            android:textAllCaps="false"
            android:layout_marginTop="25dp"
            android:elevation="5dp"
            android:onClick="gotoNext"
            android:background="@drawable/joinbtn"/>

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/by_pressing_join_us_you_agree_n_to_our_trems_and_conditions"
            android:textColor="@color/fullwhite"
            android:layout_marginTop="25dp"/>

    </LinearLayout>
</LinearLayout>